# Rust-Memory-Map

./: .gitignore  150_000_mac_test_all_structures.txt  40gb  Cargo.toml  FirstFullRun.txt  OS notes.txt  Questions  README.md  Test Results - Rull_all_tests.html  Vagrantfile  copy_and_run_to_DO.sh  copy_to_DO.sh  fromOnDOToAnother.txt  perf.txt  run_benchmark.sh  run_benchmark_build_and_search.sh  run_benchmark_cache.sh  run_benchmark_cache_build.sh  run_benchmark_cache_loop.sh  run_benchmark_cache_search.sh  run_benchmark_mac.sh  search_time_cold_cache.txt  test.mmap
.github/workflows/: markdown.yml  rust.yml
1gb25gb/: CopyDioTo1gb.sh  copy.sh  dioTo1gbShuffledData.sh  download.sh  run_on_pre_built.sh
2gb50gb/: copy.sh  download.sh
Experiments/: 1gb25gb mem.txt  dio mem 2.txt  dio mem.txt
Experiments/Experiment_1/: 1gb 2procent full table build.txt  dio full table build.txt
Experiments/Experiment_3_and_4/: README.md
Experiments/memory/: 1gb 2procent full table build.txt  dio mem.txt  (+1 more)
ITU-stuff/: FormalInformation.md  LearningGoals.md  LearningOutcomes.md  Report.md  Siteimprove.md  Todo.md  cache_noter.txt  meeting2  meeting3.md
dionysos/: copy.sh  download.sh
docs/: 1gb25gb_specs.txt  Report.md  dio_specs.txt  experiments.md  report.md
src/: BenchmarkTest.rs  BenchmarkTests.rs  BenchmarkTests_Separate.rs  DO_BenchmarkTests.rs  DO_BenchmarkTests_merged.rs  FileGenerator.rs  IntegrationTests.rs  MemTalker.rs  NameTable.rs  PayloadMap.rs  TableLookup.rs  Tree.rs  TreePrinter.rs  Utils.rs  main.rs
testdata/: db.txt  set1.txt  set2.txt
tests/: test.rs
(+311 files in other folders)
