[package]
name = "rust_map"
version = "0.1.0"
authors = ["Dag Andersen <dagbjerreandersen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
bytes = "0.5.4"
regex = "1.3.4"
bincode = "1.2.1"
rand = "0.7.3"
stopwatch = "0.0.7"
clap = "2.33.0"